[package]
name = "katec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "generating string representations of dates and times."
readme = "README.md"
repository = "https://github.com/Makonike/katec"

[dependencies]
chrono = "0.4.26"
radix_fmt = "1.0.0"
